--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff145959e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcf05575d90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff14599f390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff14599f590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf05297290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf05297490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff145be2c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff145be2e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf057f4b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf057f4d50&gt;]</pre>
 </div>
 
 </div>
