--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa800974d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9568021b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa806af2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa806af4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9568399250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9568399490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa80c0eb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa80c0ed50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f95685dab10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f95685dad50&gt;]</pre>
 </div>
 
 </div>
