--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a8449db10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c8ac30f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a84144290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a84144490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c8a8f63d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c8a8f6610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a8470eb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a8470ed10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c8aeb0c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c8aeb0ed0&gt;]</pre>
 </div>
 
 </div>
