--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7febb2a30810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f208b7f1190&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7febb2a69790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7febb2a6f450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f208b840550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f208b840750&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7febb2ca8c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7febb2cb0d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f208bd9de10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f208bd9dfd0&gt;]</pre>
 </div>
 
 </div>
