--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1697ced6d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb4773a1710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1697a105d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1697a107d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4770c7190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb4770c7390&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f169829ce90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f16982a80d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb477398e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb477958cd0&gt;]</pre>
 </div>
 
 </div>
