--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb4773a1710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f162482ae10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4770c7190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb4770c7390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1624248490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1624248690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb477398e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb477958cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1624ad1d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1624ad1f90&gt;]</pre>
 </div>
 
 </div>
