--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa056161590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f572d00de50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa055e4e1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa055e4e3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f572ccee490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f572ccee690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0563e8a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0563e8c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f572d28ad10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f572d28af10&gt;]</pre>
 </div>
 
 </div>
