--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f74727cff10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa70231ed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f74724e7310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f74724e7510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faa6ff523d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faa6ff525d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f747279ea90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7472a45d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faa704afd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faa704aff10&gt;]</pre>
 </div>
 
 </div>
