--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f28b982dd90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb4a1b7a0d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f28b953c450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f28b953c650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4a18af150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb4a18af350&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f28b9dc8d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f28b9dc8f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4a1e02a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb4a1e02c90&gt;]</pre>
 </div>
 
 </div>
