--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbe78987250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f0ec40dd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe7863d250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe7863d450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f0e964550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f0e964750&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe78c05b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe78c05d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f0ef198d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f0eec3f90&gt;]</pre>
 </div>
 
 </div>
