--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2922e9ca50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f339fa53890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2922b5b290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2922b5b490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f339f70a3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f339f70a5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2923125b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2923125d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f339fcd3d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f339fcd3f10&gt;]</pre>
 </div>
 
 </div>
