--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6acb5d0e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f48d877af10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6acb2a4510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6acb2a4710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48d842a1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f48d842a3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6acb86ddd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6acb86dfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48d89f3c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f48d89f3e10&gt;]</pre>
 </div>
 
 </div>
