--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7eff4bf6b350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f314a1cbb50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7eff4bcac450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7eff4bca3b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3149e353d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3149e35610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7eff4c20cd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7eff4c27c490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f314a3fec50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f314a3fee90&gt;]</pre>
 </div>
 
 </div>
