--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff6b84fb590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe94d5e39d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6b81d12d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6b81d14d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe94d308510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe94d308710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6b879cb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6b879cd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe94d866e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe94d866fd0&gt;]</pre>
 </div>
 
 </div>
