--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fab69fcde50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f721c00a590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab69c94450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab69c94650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f721bcae410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f721bcae650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab6a24fd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab6a24ff10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f721c277cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f721c277f10&gt;]</pre>
 </div>
 
 </div>
