--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2eb1594bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa97d1b98d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2eb12a9490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2eb12a9690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa97ce833d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa97ce835d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2eb1807c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2eb1807e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa97d44ccd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa97d44ced0&gt;]</pre>
 </div>
 
 </div>
