--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc5de574650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42bc9297d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc5ddf282d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc5ddf28490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42bc985250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42bc985450&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc5de4f1b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc5de4f1d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42bcedaad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42bcedacd0&gt;]</pre>
 </div>
 
 </div>
