--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa0ccf4f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5e7f8ff90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa0c6ea410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa0c6ea590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5e7c5c310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb5e7c5c510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa0cf74d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa0cf74f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5e8224b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb5e8224d90&gt;]</pre>
 </div>
 
 </div>
