--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5e7f8ff90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc37b42d910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5e7c5c310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5e7c5c510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc37b4643d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc37b4645d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5e8224b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5e8224d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc37b9c6cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc37b9c6ed0&gt;]</pre>
 </div>
 
 </div>
