--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7442ea7450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa868e17510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7442b5f450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7442b5f650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa868e43d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa868e4a510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7443127d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7443127f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa869083910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa86908cdd0&gt;]</pre>
 </div>
 
 </div>
